fixing helper messages;fixing duplication and deleting board on mobile

--- a/todo/app/assets/stylesheets/moods/mood_selection.css
+++ b/todo/app/assets/stylesheets/moods/mood_selection.css
@@ -122,6 +122,7 @@
   text-align: center;
   margin-top: 10px;
   font-weight: bold;
+  font-size: 17px;
   color: var(--text-color-gray-100);
 }
 
